# revisit-bpr

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  docker-compose.yaml  example.py  pyproject.toml  setup.cfg
configs/RQ1/: cornac.yaml.j2  implicit.yaml.j2  lightfm.yaml.j2  ours.yaml.j2  recbole.yaml.j2
configs/RQ1/elliot/: 128.yaml  128_batch.yaml  16.yaml  16_batch.yaml  32.yaml  32_batch.yaml  64.yaml  64_batch.yaml
configs/RQ2/item-bias-reg/: no-reg.yaml.j2  one-reg.yaml.j2  user-item.yaml.j2  user-pos-neg.yaml.j2
configs/RQ2/neg-sampling/: ada-sampling-ml-20m.yaml.j2  ada-sampling-msd.yaml.j2  adam-ada-sampling-ml-20m.yaml.j2  adam-ada-sampling-msd.yaml.j2
configs/RQ2/optimizers/: adam-ml-20m.yaml.j2  adam-msd.yaml.j2  best-adam-msd.yaml.j2  rmsprop-ml-20m.yaml.j2  rmsprop-msd.yaml.j2  sgd-momentum-ml-20m.yaml.j2  sgd-momentum-msd.yaml.j2
configs/RQ3/figure4/: adam-ada-sampling-ml-20m.yaml.j2  adam-ada-sampling-msd.yaml.j2  adam-uniform-sampling-ml-20m.yaml.j2  adam-uniform-sampling-msd.yaml.j2
configs/RQ3/time-split/: ada-sampling-adam.yaml.j2  ada-sampling.yaml.j2  cornac.yaml.j2  ease.yaml.j2  implicit.yaml.j2  lightfm.yaml.j2  multdae.yaml.j2  multvae.yaml.j2  recbole.yaml.j2
configs/RQ3/user-split/: cornac.yaml.j2  ease.yaml.j2  implicit.yaml.j2  lightfm.yaml.j2  multdae.yaml.j2  multvae.yaml.j2  recbole.yaml.j2
configs/popularity/: netflix.yaml.j2  revisit.yaml.j2  time-split.yaml.j2
docker/: cpu.Dockerfile  elliot.Dockerfile  gpu.Dockerfile  mymedialite.Dockerfile
experiments/: base.py  click_options.py  decorator.py  elliot.py  encoder.py  hp.py  infer.py  launcher.py  options.py  run.py  s3_infer.py  s3_run.py  settings.py  trainer.py  ttest.py  utils.py
experiments/bpr/: __init__.py  dataset.py  exp.py
experiments/bpr/cmd/: build_datasets.py  cutoff_samples.py  split.py
experiments/datasets/revisit-ials/: generate_data.py
experiments/datasets/time-split/: dataset.py
experiments/ease/: __init__.py  exp.py
experiments/multae/: __init__.py  dataset.py  exp.py
experiments/popularity/: __init__.py  exp.py
experiments/s3/: fs.py
revisit_bpr/datasets/: jsonl.py
revisit_bpr/metrics/: __init__.py  auc.py  fbeta.py  map.py  ndcg.py  precision.py  recall.py
revisit_bpr/models/: __init__.py
revisit_bpr/modules/: __init__.py  mlp.py  neg_samplers.py
src/datasets/: jsonl.py
src/metrics/: __init__.py  auc.py  fbeta.py  map.py  metric.py  ndcg.py  precision.py  recall.py
src/models/: __init__.py
src/modules/: __init__.py  activation.py  mlp.py  neg_samplers.py
(+31 files in other folders)
